# factored-segmenter

./: .gitattributes  .gitconfig  .gitignore  NOTICE.md  README.md  README.txt  factored-segmenter.csproj
cli/: Program.cs  README.txt
lib/: README.txt  RemoveThese.cs  SentencePieceInterop.cs  TextHelpers.cs  Types.cs  Utils.cs
spm/: CMakeLists.txt  SentencePieceInterop.cpp  spm.model  spm.vocab  unicode_conversions.h
src/: FactoredSegmenter.cs  FactoredSegmenterConfigs.cs  FactoredSegmenterScriptHelpers.cs  ProcessTools.cs  Program.cs  README.txt  SegmenterRuntime.cs  SentencePieceConfigs.cs  SentencePieceManaged.cs  SentencePieceWrapper.cs  TextHelpers.cs  Types.cs  factored-segmenter.csproj  factored-segmenter.sln
test/: FactoredSegmenterScriptHelpersTests.cs  FactoredSegmenterTests.cs
test/blns/: blns.txt  blns_README.txt
